force-app/main/default/objects/PS_ASU_SP_SUBPLANV__x.object
<CustomObject>
    <fields>
        <fullName>ACAD_CAREER__c</fullName>
        <description>Data sourced from PS_ACAD_PROG.ACAD_CAREER</description>
        <externalDeveloperName>ACAD_CAREER</externalDeveloperName>
        <label>Career</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACAD_PLAN__c</fullName>
        <description>Data sourced from PS_ACAD_PLAN.ACAD_PLAN</description>
        <externalDeveloperName>ACAD_PLAN</externalDeveloperName>
        <label>Academic Plan</label>
        <length>25</length>
        <referenceTargetField>Plan__c.Plan_Code__c</referenceTargetField>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Student Subplan (external)</relationshipLabel>
        <relationshipName>Student_Subplan_external</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>ACAD_SUBPLAN_TYPE__c</fullName>
        <description>Data sourced from PS_ACAD_SUBPLN_TBL.ACAD_SUBPLAN_TYPE</description>
        <externalDeveloperName>ACAD_SUBPLAN_TYPE</externalDeveloperName>
        <label>Subplan Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACAD_SUB_PLAN__c</fullName>
        <description>Data sourced from PS_ACAD_SUBPLAN.ACAD_SUB_PLAN</description>
        <externalDeveloperName>ACAD_SUB_PLAN</externalDeveloperName>
        <label>Academic Subplan</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASU_CMTEE_CHG_UPD__c</fullName>
        <description>Data sourced from PS_ASU_AA_POS_ADV.Derived</description>
        <externalDeveloperName>ASU_CMTEE_CHG_UPD</externalDeveloperName>
        <label>Committee Member Update Needed</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DESCR__c</fullName>
        <description>Data sourced from PS_ACAD_SUBPLN_TBL.DESCR</description>
        <externalDeveloperName>DESCR</externalDeveloperName>
        <label>Subplan Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMPLID__c</fullName>
        <description>Data sourced from PS_ACAD_PROG.EMPLID</description>
        <externalDeveloperName>EMPLID</externalDeveloperName>
        <label>Contact</label>
        <length>10</length>
        <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Subplan (external)</relationshipLabel>
        <relationshipName>Student_Subplan_external</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>SAA_SUBPLAN_DESCR__c</fullName>
        <description>Data sourced from PSXLATITEM.XLATLONGNAME</description>
        <externalDeveloperName>SAA_SUBPLAN_DESCR</externalDeveloperName>
        <label>Subplan Type Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STDNT_CAR_NBR__c</fullName>
        <description>Data sourced from PS_ACAD_PROG.STDNT_CAR_NBR</description>
        <externalDeveloperName>STDNT_CAR_NBR</externalDeveloperName>
        <label>Student Career Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <description>Data source script can be found here: https://docs.google.com/document/d/1YZlFn_pWyWuVlczPIdzRWoZ0SjMQLVtSKEGI-AqViu4/edit</description>
    <externalDataSource>asu_ps_lightning</externalDataSource>
    <externalName>PS_ASU_SP_SUBPLANV</externalName>
    <label>Student Subplan (external)</label>
    <pluralLabel>Student Subplan (external)</pluralLabel>
</CustomObject>